--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 
                 <div class="service">
                     <h3>   Web Desgin   </h3>
-                    <p>I started designing web sites in 2022. This web site is the first one i ever designed.</p>
+                    <p>I started designing web sites in 2022. This web site is the first one i have ever designed.</p>
                 </div> <!-- / service -->
             </div> 
         </section>
