mionr content changes

--- a/index.html
+++ b/index.html
@@ -50,7 +50,8 @@
                 <div class="service">
                     <h3>    Game Design    </h3>
                     <p>I design games for so long. 
-                        I've been writing and reading GDD for 5 years.</p>
+                        I've been writing and reading GDD for 5 years.
+                    </p>
                 </div> <!-- / service -->
                 <div class="service">
                     <h3>Game Development</h3>
@@ -59,7 +60,7 @@
                 </div> <!-- / service -->
                 <div class="service">
                     <h3>   Web Desgin   </h3>
-                    <p>I started designing web sites in 2022. This web site is the first one i have ever designed.</p>
+                    <p>I started designing web sites in 2022. This is a pretty new field for me. This web site is the first one i have ever designed.</p>
                 </div> <!-- / service -->
             </div> 
         </section>
@@ -71,7 +72,7 @@
             <div class="about-me__body">
                 <p>I am currently studying Computer Engineering.
                     I am a game developper and designer since 2020.
-                    I have worked on some projects in the past and currently i am working 
+                    I have worked on various projects in the past currently i work part time 
                     on a big project with my team.</p>
             </div>
             
