--- a/portfolio-item-EndlessWarrior.html
+++ b/portfolio-item-EndlessWarrior.html
@@ -61,14 +61,14 @@
                 To reach your goal you must use the two mechanics very presisly right.</p>
             <img src="img/EndlessWarrior01.jpg" alt="">
             <p>As you can tell by now game has only two player controlled mechanics. Sliding and jumping. 
-                Both of them are designed the same. If you press longer you jump/slide longer.
+                Both of them are designed the same. If you press longer you jump/slide longer. This mechanics includes physics as well.
+                For example if you jump while sliding you will jump much longer because of your speed.
             </p>
             <img src="img/EndlessWarrior02.jpg" alt="">
             <p>Enviroment is randomly generated each run to keep player more entertained.
-                This way every run feels slightly different than other one.
+                This every run feels slightly different than other one. 
             </p>
             <img src="img/EndlessWarrior03.jpg" alt="">
-            <p></p>
            </div>
          
          <!-- Footer -->
