--- a/portfolio-item-EnfectedSurvival.html
+++ b/portfolio-item-EnfectedSurvival.html
@@ -58,21 +58,23 @@
                 Goal is to reach the highest wave count as you can while running away from or killing the zombies.
             </p>
             <img src="img/EnfectedSurvival01.jpg" alt="">
-            <p>Project has two different game modes. 
-                First one starts from the underground and goes up to the space.
-                Goal is to reach the top whitout falling down.
-                Second one starts and ends in the space.
-                Goal is to stay away from the asteroids while staying in screen.
+            <p> Every 5th wave there is a boss fight.
+                Boss has a summoning ability to keep thing interested in fight. 
+                With this ability he can summon many zombies around player in every 15 seconds.
             </p>
             <img src="img/EnfectedSurvival02.jpg" alt="">
-            <p> Every 5th wave there is a boss fight.
-                Boss has a summoning ability to keep thing interested in fight.
-            </p>
-            <img src="img/EnfectedSurvival03.jpg" alt="">
             <p>
                 Game also has a weapon selector mechanic to make gameplay have more variety.
+                In selector screen there is 5 types of weapons:
+                Pistol, shoots powerfull bullets one at a time with 6 bullet capasity mag.
+                Rifle, shoots three slightly weaker bullets with 30 capasity mag.
+                Auto, shoots weak bullets till you run out of bullets in your 100 bullet mag.
+                Crossbow, shoots a powerfull arrow nearly one-shot every enemy with 1 bullet mag.
+                Mine, you can place them down in the map. If any enemy presses on it, it would create an explosion that damages the area.
                 I learned a lot about Unity's ScriptableObjects thanks to this mechanic.
             </p>
+            <img src="img/EnfectedSurvival03.jpg" alt="">
+            
            </div>
          
          <!-- Footer -->
