--- a/portfolio-item-ProjectA.html
+++ b/portfolio-item-ProjectA.html
@@ -54,7 +54,7 @@
         <div class="portfolio-item-individual">
             <p>Project-A is an 2d action-platformer game.
                 Main goal is fighting towards the exit of the vault player is in.
-                After every vault player will be forced to fight against the boss of tha vault.
+                After every vault player will be forced to fight against the boss of the vault.
             </p>
             <img src="img/ProjectA01.png" alt="">
             <p>As the game progress player will encounter lots of bosses and different vault to explore and conquer.
@@ -69,7 +69,6 @@
                 in another vault it will have to find its way out of the maze.
             </p>
             <img src="img/ProjectA03.png" alt="">
-            <p></p>
            </div>
          
          <!-- Footer -->
