--- a/portfolio-item-RocketJump.html
+++ b/portfolio-item-RocketJump.html
@@ -52,19 +52,24 @@
         <!-- Info -->
         <div class="portfolio-item-individual">
             <p>This is my first ever published project.
-                I learned the Unity essantials thanks to this project.</p>
+                I learned the Unity essantials thanks to this project.
+                This is a basic endless runner game but player tries to reach the space with jetpack instead of running normally.
+            </p>
             <img src="img/RocketJump01.jpg" alt="">
-            <p>Project has two different game modes. 
+            <p>Project has two different game modes with differeny games. 
                 First one starts from the underground and goes up to the space.
+                There is platforms that are randomly generated above you and some of them are broken. 
+                Player has to jump one to another while trying not to stand on a broken one.
                 Goal is to reach the top whitout falling down.
                 Second one starts and ends in the space.
                 Goal is to stay away from the asteroids while staying in screen.
             </p>
             <img src="img/RocketJump02.jpg" alt="">
-            <p> Since this is my first ever published project i am pretty proud with this system working correctly.    
+            <p> Game also includes a rather primitive shopping system. Player can buy different cosmetic things in the market by coins
+                which is earned by playing and scoring more. 
+                Since this is my first ever published project i am pretty proud with this system working correctly.    
             </p>
             <img src="img/RocketJump03.jpg" alt="">
-            <p></p>
            </div>
          
          <!-- Footer -->
