--- a/portfolio-item-SiegeWizard.html
+++ b/portfolio-item-SiegeWizard.html
@@ -59,19 +59,23 @@
         <!-- Info -->
         <div class="portfolio-item-individual">
             <p>This project was made for GGJ 2022. And it was my first game jam experience.
-                Theme was duality.
-            </p>
-            <img src="img/SiegeWizard01.jpg" alt="">
-            <p>We created a wizard who can time travel to before and after the invasion. 
-                That was our duality. This is a puzzle game which you try to reach the door in correct time.
+                Theme was duality. We created a wizard who can time travel to before and after the invasion. 
+                That was our duality. Goal is to reach the door in correct time.
                 There is a unique time changing mechanic in this game and it works like a charm.
             </p>
+            <img src="img/SiegeWizard01.jpg" alt="">
+            <p> Beside the time mechanic there is twe types of boxes to move in the game. 
+                The golden box is moved by hand so wizard has to be holding it.
+                The time box is moved by magic and wizard has to be away from the box to move it.
+                Sometimes player has to stay away sometimes stay close and this way game would easily feel different with each box use.
+            </p>
             <img src="img/SiegeWizard02.jpg" alt="">
-            <p> There is also a box player can grab and a box player can use the force to move.
-                With these elements player can find its way to the door trough the levels.
+            <p> 
+                Before reaching to the door player has to find the key in the room. 
+                Key could be anywhere or anytime. 
+                While roaming through map player should be roaming through the time as well.
             </p>
             <img src="img/SiegeWizard03.jpg" alt="">
-            <p></p>
            </div>
          
          <!-- Footer -->
