--- a/index.html
+++ b/index.html
@@ -101,16 +101,18 @@
                 <a href="ProjectA.html" class="portfolio__item">
                     <img src="img/ProjectACover.jpg" alt="Project - A" class="portfolio__img">
                 </a>
-                
                 <!-- Portfolio item -->
                 <a href="EnfectedSurvival.html" class="portfolio__item">
                     <img src="img/EnfectedSurvivalCover.jpg" alt="Enfected Survival" class="portfolio__img">
+                </a>
+                <!-- Portfolio item -->
+               <a href="KeepQuietUntilDeath.html" class="portfolio__item">
+                <img src="img/KQUDCover.jpg" alt="Keep Quiet Until Death" class="portfolio__img">
                 </a>
                <!-- Portfolio item -->
                <a href="SiegeWizard.html" class="portfolio__item">
                    <img src="img/SiegeWizardCover.jpg" alt="Siege Wizard" class="portfolio__img">
                </a>
-               
                <!-- Portfolio item -->
                <a href="RandomLab.html" class="portfolio__item">
                    <img src="img/RandomLabCover.jpg" alt="RandomLab" class="portfolio__img">
