--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
                 </a>
                 <!-- Portfolio item -->
                <a href="KeepQuietUntilDeath.html" class="portfolio__item">
-                <img src="img/KQUDCover.jpg" alt="Keep Quiet Until Death" class="portfolio__img">
+                <img src="img/KQUDCover.png" alt="Keep Quiet Until Death" class="portfolio__img">
                 </a>
                <!-- Portfolio item -->
                <a href="SiegeWizard.html" class="portfolio__item">
