--- a/KeepQuietUntilDeath.html
+++ b/KeepQuietUntilDeath.html
@@ -41,7 +41,7 @@
                 <strong>Keep Quiet Until Death</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">LOOT - SURVIVAL</p>
-            <img src="img/ProjectACover.jpg" alt="" class="intro__img">
+            <img src="img/KQUDCover.png" alt="" class="intro__img">
         </section>
 
         <!-- Buttons -->
