New Color and Trailer

--- a/KeepQuietUntilDeath.html
+++ b/KeepQuietUntilDeath.html
@@ -47,6 +47,7 @@
         <!-- Buttons -->
         <div class="portfolio-item-buttons">
             <a href="https://github.com/altay434/KeepQuietUntilDeath" class="portfolio-item-button">GitHub</a>
+            <a href="https://www.youtube.com/watch?v=NA33QaNcAo0&feature=youtu.be" class="portfolio-item-button">YouTube</a>
         </div>      
         
 
