Calculator web app js

--- a/Calc/calc.html
+++ b/Calc/calc.html
@@ -77,6 +77,6 @@
         </section>
     </class>
 
-    <script src = "jss/script.js"></script>
+    <script src = "js/script.js"></script>
 </body>
 </html>
