--- a/index.html
+++ b/index.html
@@ -87,36 +87,57 @@
             
             <div class="portfolio">
                  <!-- Portfolio item -->
-                 <a href="EndlessWarrior.html" class="portfolio__item">
-                     <img src="img/EndlessWarriorCover.jpg" alt="Endless Warrior" class="portfolio__img">
-                 </a>
+                 <div class="portfolio-item">
+                    <a href="EndlessWarrior.html">
+                        <img src="img/EndlessWarriorCover.jpg" alt="Endless Warrior" class="portfolio__img">
+                    </a>
+                    <p class="section__description section__description--work"> Endless Warrior</p>
+                 </div>
                  <!-- Portfolio item -->
-                 <a href="RocketJump.html" class="portfolio__item">
-                    <img src="img/RocketJumpCover.png" alt="RocketJump" class="portfolio__img">
-                </a>
+                 <div class="potfolio-item">
+                    <a href="RocketJump.html">
+                       <img src="img/RocketJumpCover.png" alt="RocketJump" class="portfolio__img">
+                   </a>
+                   <p class="section__description section__description--work"> Rocket Jump</p>
+                 </div>
              </div>
              <p class="section__subtitle section__subtitle--work">Demos & Jam Games</p>
              <div class="portfolio">
                 <!-- Portfolio item -->
-                <a href="ProjectA.html" class="portfolio__item">
-                    <img src="img/ProjectACover.jpg" alt="Project - A" class="portfolio__img">
-                </a>
+                <div class="portfolio-item">
+                    <a href="ProjectA.html">
+                        <img src="img/ProjectACover.jpg" alt="Project - A" class="portfolio__img">
+                    </a>
+                    <p class="section__description section__description--work"> Project-A</p>
+                </div>
                 <!-- Portfolio item -->
-                <a href="EnfectedSurvival.html" class="portfolio__item">
-                    <img src="img/EnfectedSurvivalCover.jpg" alt="Enfected Survival" class="portfolio__img">
-                </a>
+                <div class="portfolio-item">
+                    <a href="EnfectedSurvival.html">
+                        <img src="img/EnfectedSurvivalCover.jpg" alt="Enfected Survival" class="portfolio__img">
+                    </a>
+                    <p class="section__description section__description--work"> Enfected Survival</p>
+                </div>
                 <!-- Portfolio item -->
-               <a href="KeepQuietUntilDeath.html" class="portfolio__item">
-                <img src="img/KQUDCover.png" alt="Keep Quiet Until Death" class="portfolio__img">
+                <div class="portfolio-item">
+                    <a href="KeepQuietUntilDeath.html">
+                     <img src="img/KQUDCover.png" alt="Keep Quiet Until Death" class="portfolio__img">
+                     </a>
+                     <p class="section__description section__description--work"> Keep Quiet Until Death</p>
+                </div>
+               <!-- Portfolio item -->
+               <div class="portfolio-item">
+                <a href="SiegeWizard.html">
+                    <img src="img/SiegeWizardCover.jpg" alt="Siege Wizard" class="portfolio__img">
                 </a>
+                <p class="section__description section__description--work"> Siege Wizard</p>
+               </div>
                <!-- Portfolio item -->
-               <a href="SiegeWizard.html" class="portfolio__item">
-                   <img src="img/SiegeWizardCover.jpg" alt="Siege Wizard" class="portfolio__img">
-               </a>
-               <!-- Portfolio item -->
-               <a href="RandomLab.html" class="portfolio__item">
-                   <img src="img/RandomLabCover.jpg" alt="RandomLab" class="portfolio__img">
-               </a>
+               <div class="portfolio-item">
+                <a href="RandomLab.html">
+                    <img src="img/RandomLabCover.jpg" alt="RandomLab" class="portfolio__img">
+                </a>
+                <p class="section__description  section__description--work"> RandomLab</p>
+               </div>
 
          </section>
          
