New Portfolio listing

--- a/EndlessWarrior.html
+++ b/EndlessWarrior.html
@@ -34,24 +34,23 @@
             </nav>
         </header>
 
-
         <!-- Introduction -->
         <section class="intro">
             <h1 class="section__title section__title--intro">
                 <strong>Endless Warrior</strong>
             </h1>
-            <p class="section__subtitle section__subtitle--intro">ENDLESS-ACTION-PLATFORMER</p>
+            <p class="section__subtitle section__subtitle--intro">ENDLESS-RUNNER</p>
             <img src="img/EndlessWarriorCover.jpg" alt="" class="intro__img">
         </section>
 
         <!-- Buttons -->
-        <div class="portfolio-item-buttons">
+        <div class="portfolio-item-individual-buttons">
             <a href="https://play.google.com/store/apps/details?id=com.RossenStudios.EndlessWarrior" 
-            class="portfolio-item-button">Play Store</a>
+            class="portfolio-item-individual-button">Play Store</a>
             <a href="https://benyasar.itch.io/endlesswarrior" 
-            class="portfolio-item-button">Itch.io</a>
+            class="portfolio-item-individual-button">Itch.io</a>
             <a href="https://www.youtube.com/watch?v=R_hLUxDhkOE" 
-            class="portfolio-item-button">YouTube</a>
+            class="portfolio-item-individual-button">YouTube</a>
         </div>      
 
         <!-- Info -->
