--- a/EnfectedSurvival.html
+++ b/EnfectedSurvival.html
@@ -45,9 +45,9 @@
         </section>
 
         <!-- Buttons -->
-        <div class="portfolio-item-buttons">
-            <a href="https://benyasar.itch.io/enfected-survivd" class="portfolio-item-button">Itch.io</a>
-            <a href="https://github.com/YasarGencer/EnfectedSurvival" class="portfolio-item-button">github</a>
+        <div class="portfolio-item-individual-buttons">
+            <a href="https://benyasar.itch.io/enfected-survivd" class="portfolio-item-individual-button">Itch.io</a>
+            <a href="https://github.com/YasarGencer/EnfectedSurvival" class="portfolio-item-individual-button">github</a>
         </div>      
 
         <!-- Info -->
