--- a/KeepQuietUntilDeath.html
+++ b/KeepQuietUntilDeath.html
@@ -45,9 +45,9 @@
         </section>
 
         <!-- Buttons -->
-        <div class="portfolio-item-buttons">
-            <a href="https://github.com/altay434/KeepQuietUntilDeath" class="portfolio-item-button">GitHub</a>
-            <a href="https://www.youtube.com/watch?v=NA33QaNcAo0&feature=youtu.be" class="portfolio-item-button">YouTube</a>
+        <div class="portfolio-item-individual-buttons">
+            <a href="https://github.com/altay434/KeepQuietUntilDeath" class="portfolio-item-individual-button">GitHub</a>
+            <a href="https://www.youtube.com/watch?v=NA33QaNcAo0&feature=youtu.be" class="portfolio-item-individual-button">YouTube</a>
         </div>      
         
 
@@ -59,9 +59,7 @@
             </p>
             <img src="img/KQUD01.jpg" alt="">
             <P>
-                Sound Mechanic:
-            </P>
-            <P>
+                SOUND MECHANIC:
                 There is creatures named "Iron Claw".
                 Iron Claw's can't see but they can hear and they are after your flesh.
                 You must use your sling to keep them distracted and away from you. 
@@ -70,16 +68,14 @@
             </p>
             <img src="img/KQUD03.jpg" alt="">
             <p>
-                Loot Mechanic: 
-            </p><p>
+                LOOT MECHANIC:
                 This is the main goal of the game as the gameplay atleast.
                 Player can loot scrap and will be able to craft in the future updates. 
                 Player can also loot notes from storyline and bullets to kill more DNFs.
             </p>
             <img src="img/KQUD04.jpg" alt="">
             <p>
-                Story Line:
-            </p><p>
+                STORY LINE:
                 Game takes place at a alternative earth that is currently at post-apocalyptic era. 
                 The DNF's did take over the world and looking for more human flesh to grow even more. 
                 As a player you wake up in a bunker and find a note from a professor who thinks 
