--- a/ProjectA.html
+++ b/ProjectA.html
@@ -45,8 +45,8 @@
         </section>
 
         <!-- Buttons -->
-        <div class="portfolio-item-buttons">
-            <a href="https://benyasar.itch.io/project-a" class="portfolio-item-button">Itch.io</a>
+        <div class="portfolio-item-individual-buttons">
+            <a href="https://benyasar.itch.io/project-a" class="portfolio-item-individual-button">Itch.io</a>
         </div>      
         
 
