--- a/RocketJump.html
+++ b/RocketJump.html
@@ -41,12 +41,12 @@
                 <strong>Rocket Jump</strong>
             </h1>
             <p class="section__subtitle section__subtitle--intro">ENDLESS-PLATFORMER</p>
-            <img src="img/RocketJumpCover.jpg" alt="" class="intro__img">
+            <img src="img/RocketJumpCover.png" alt="" class="intro__img">
         </section>
 
         <!-- Buttons -->
-        <div class="portfolio-item-buttons">
-            <a href="https://play.google.com/store/apps/details?id=com.RossenStudios.RocketJump" class="portfolio-item-button">Play Store</a>
+        <div class="portfolio-item-individual-buttons">
+            <a href="https://play.google.com/store/apps/details?id=com.RossenStudios.RocketJump" class="portfolio-item-individual-button">Play Store</a>
         </div>      
 
         <!-- Info -->
