--- a/SiegeWizard.html
+++ b/SiegeWizard.html
@@ -45,15 +45,15 @@
         </section>
 
         <!-- Buttons -->
-        <div class="portfolio-item-buttons">
+        <div class="portfolio-item-individual-buttons">
             <a href="https://benyasar.itch.io/siege-wizard" 
-            class="portfolio-item-button">Itch.io</a>
+            class="portfolio-item-individual-button">Itch.io</a>
             
             <a href="https://github.com/YasarGencer/SiegeWizard"
-             class="portfolio-item-button">GitHub</a>
+             class="portfolio-item-individual-button">GitHub</a>
              
             <a href="https://www.youtube.com/watch?v=KKMR9Y4kY-o"
-            class="portfolio-item-button">YouTube</a>
+            class="portfolio-item-individual-button">YouTube</a>
         </div>      
 
         <!-- Info -->
