--- a/RandomLab.html
+++ b/RandomLab.html
@@ -45,16 +45,16 @@
         </section>
 
         <!-- Buttons -->
-        <div class="portfolio-item-buttons">
+        <div class="portfolio-item-individual-buttons">
             <a href="https://benyasar.itch.io/randomlab" 
-            class="portfolio-item-button">Itch.io</a>
+            class="portfolio-item-individual-button">Itch.io</a>
             
             <a href="https://github.com/YasarGencer/RandomLab" 
-            class="portfolio-item-button">GitHub</a>
+            class="portfolio-item-individual-button">GitHub</a>
 
             
             <a href="https://www.youtube.com/watch?v=vXtgUScJcGc"
-            class="portfolio-item-button">YouTube</a>
+            class="portfolio-item-individual-button">YouTube</a>
         </div>      
 
         <!-- Info -->
