--- a/index.html
+++ b/index.html
@@ -86,6 +86,12 @@
             <div class="portfolio">
                 <!-- Portfolio item -->
                 <div class="portfolio-item">
+                    <img src="img/HookCastle.png" alt="Hook Castle" class="portflio-item-image">
+                    <p class="section__description section__description--portfolio"> Hook Castle</p>
+                    <a href="HookCastle.html" class="portfolio-item-button">Details</a>
+                </div>
+                <!-- Portfolio item -->
+                <div class="portfolio-item">
                     <img src="img/EndlessWarriorCover.jpg" alt="Endless Warrior" class="portflio-item-image">
                     <p class="section__description section__description--portfolio"> Endless Warrior</p>
                     <a href="EndlessWarrior.html" class="portfolio-item-button">Details</a>
