--- a/EnfectedSurvival.html
+++ b/EnfectedSurvival.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ENFECTED SURVIVAL</title>
+        <link rel="icon" href="img/LightLogo-PNG.png">
         <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" 
@@ -19,8 +20,8 @@
     <body>
         <header>
             <div class="logo">
-                <img src="" alt="">
-            </div>
+                <img src="img/LightLogo-Banner-PNG.png" alt="">
+            </div>ß
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
             </button>
