--- a/EndlessWarrior.html
+++ b/EndlessWarrior.html
@@ -4,6 +4,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>ENDLESS WARRIOR</title>
+        <link rel="icon" href="img/LightLogo-PNG.png">
         <link rel="stylesheet"
         href="https://cdnjs.cloudflare.com/ajax/libs/normalize/7.0.0/normalize.min.css">
         <link rel="stylesheet" 
@@ -19,7 +20,7 @@
     <body>
         <header>
             <div class="logo">
-                <img src="" alt="">
+                <img src="img/LightLogo-Banner-PNG.png" alt="">
             </div>
             <button class="nav-toggle" aria-label="toggle navigation">
                 <span class="hamburger"></span>
