new web project

--- a/Web Projects/Calc/index.html
+++ b/Web Projects/Calc/index.html
@@ -5,8 +5,9 @@
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="css/style.css">
+   <link rel="icon" href="YasarGencer.github.io/img/LightLogo-PNG.png">
    <title>Calculator by YG</title>
-</head>
+</head> 
 <body>
    <class class="wrapper">
       <section class="screen">
