--- a/index.html
+++ b/index.html
@@ -139,8 +139,15 @@
                 <div class="portfolio-item">
                     <img src="img/caculator.jpg" alt="Hook Castle" class="portflio-item-image">
                     <p class="section__description section__description--portfolio"> Calculator</p>
-                    <a href="Calc/calc.html" class="portfolio-item-button">Details</a>
+                    <a href="Web%20Projects/Calc/index.html" class="portfolio-item-button">Details</a>
                 </div>
+                <!-- Portfolio item -->
+                <div class="portfolio-item">
+                    <img src="img/tictactoe.jpg" alt="Hook Castle" class="portflio-item-image">
+                    <p class="section__description section__description--portfolio"> Tic-Tac-Toe</p>
+                    <a href="Web%20Projects/XOX/index.html" class="portfolio-item-button">Details</a>
+                </div>
+            </section>
             </section>
         </section>   
         
