--- a/index.html
+++ b/index.html
@@ -80,9 +80,9 @@
         
         <!-- My Portfolio -->
         <section class="my-portfolio" id="portfolio">
-            <h2 class="section__title section__title--portfolio">MY PORTFOLIO</h2>
-            <!-- Game Portfolio -->
-            <p class="section__subtitle section__subtitle--portfolio">Game Projects</p>  
+            <h2 class="section__title section__title--portfolio">MY PORTFOLIO</h2>        
+            <!-- Rossen Studios -->
+            <p class="section__subtitle section__subtitle--portfolio">Rossen Studios</p>  
             <section class="portfolio"> 
                 <!-- Portfolio item -->
                 <div class="portfolio-item">
@@ -102,8 +102,17 @@
                     <p class="section__description section__description--portfolio"> Rocket Jump</p>
                     <a href="RocketJump.html" class="portfolio-item-button">Details</a>
                 </div><!-- Portfolio item -->
+            </section>   
+            <!-- Demo or Jam Games -->
+            <p class="section__subtitle section__subtitle--portfolio">Demos or Jam Games</p>  
+            <section class="portfolio">  
                 <div class="portfolio-item">
-                    <img src="img/ProjectACover.jpg" alt="Endless Warrior" class="portflio-item-image">
+                    <img src="img/NextRogueCover.png" alt="NextRogue" class="portflio-item-image">
+                    <p class="section__description section__description--portfolio"> Project - NextRogue</p>
+                    <a href="NextRogue.html" class="portfolio-item-button">Details</a>
+                </div>b
+                <div class="portfolio-item">
+                    <img src="img/ProjectACover.jpg" alt="ProjectA" class="portflio-item-image">
                     <p class="section__description section__description--portfolio"> Project - A</p>
                     <a href="ProjectA.html" class="portfolio-item-button">Details</a>
                 </div>
