--- a/SkyRevengers.html
+++ b/SkyRevengers.html
@@ -57,9 +57,10 @@
         <!-- Info -->
         <div class="portfolio-item-individual"> 
             <p> This is a casual endless runner game made by my friends.
-                You can reach them through this mails:
-                - serverahi488@gmail.com
-                - goktuguum@gmail.com
+            </p>
+            <p>You can reach them through this mails: </p>
+            <p> - goktuguum@gmail.com</p>
+            <p> - serverahi488@gmail.com</p> 
             </p>
             <img src="img/SkyRevengers 2.png" alt="">
             <p> Main goal is to fly as much as you can while you avoid the obstacles that come in your way.
