--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <section class="portfolio">  
                 <div class="portfolio-item">
                     <img src="img/NextRogueCover.png" alt="NextRogue" class="portflio-item-image">
-                    <p class="section__description section__description--portfolio"> Project - NextRogue</p>
+                    <p class="section__description section__description--portfolio"> Next Rogue</p>
                     <a href="NextRogue.html" class="portfolio-item-button">Details</a>
                 </div>b
                 <div class="portfolio-item">
