--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
                     <img src="img/NextRogueCover.png" alt="NextRogue" class="portflio-item-image">
                     <p class="section__description section__description--portfolio"> Next Rogue</p>
                     <a href="NextRogue.html" class="portfolio-item-button">Details</a>
-                </div>b
+                </div>
                 <div class="portfolio-item">
                     <img src="img/ProjectACover.jpg" alt="ProjectA" class="portflio-item-image">
                     <p class="section__description section__description--portfolio"> Project - A</p>
