--- a/NextRogue.html
+++ b/NextRogue.html
@@ -53,7 +53,7 @@
             <a href="https://github.com/YasarGencer/Unity-NextRogue"
             class="portfolio-item-individual-button">GitHub</a> 
 
-            <a href="https://www.youtube.com/watch?v=2GCtduTBzg8&t=66s"
+            <a href="https://www.youtube.com/@yasarben"
             class="portfolio-item-individual-button">YouTube</a>  
         </div>      
 
