--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 </div> <!-- / service -->
                 <div class="service">
                     <h3>Game Development</h3>
-                    <p>I have been portfolioing on game development on Unity since 2020. 
+                    <p>I have been working on game development on Unity since 2020. 
                         It was my chilhoold dream to make games and as soon as i get the chance i trained myself in this field.</p>
                 </div> <!-- / service -->
                 <div class="service">
@@ -71,7 +71,7 @@
             <div class="about-me__body">
                 <p>I am currently studying Computer Engineering.
                     I am a game developper and designer since 2020.
-                    I have portfolioed on various projects in the past currently i portfolio part time 
+                    I have worked on various projects in the past currently i work part time 
                     on a big project with my team.</p>
             </div>
             <img src="img/abouyMeImg.JPG" alt=""class="about-me__img">
