--- a/HookCastle.html
+++ b/HookCastle.html
@@ -48,12 +48,14 @@
         <div class="portfolio-item-individual-buttons">
             <a href="https://play.google.com/store/apps/details?id=com.RossenStudios.HookCastle" 
             class="portfolio-item-individual-button">Play Store</a>
+            <a href="https://play.google.com/store/apps/details?id=com.RossenStudios.HookCastle" 
+            class="portfolio-item-individual-button">Play Store</a>
         </div>      
 
         <!-- Info -->
         <div class="portfolio-item-individual">
             <p>Hook Castle is an endless runner game where player tries to reach to the top of the castle.
-            Player has a to throw a hook to get to the higher platforms.</p>
+            Player has to throw a hook to get to the higher platforms.</p>
             <img src="img/HookCastleCover.png" alt="">
             <p>Gameplay is as simple as posible. Player only needs to touch the screen when the indicator directs to the next platform. Then the hook will be throwen to get player up.
             </p>
