--- a/HookCastle.html
+++ b/HookCastle.html
@@ -49,7 +49,7 @@
             <a href="https://play.google.com/store/apps/details?id=com.RossenStudios.HookCastle" 
             class="portfolio-item-individual-button">Play Store</a>
             <a href="https://play.google.com/store/apps/details?id=com.RossenStudios.HookCastle" 
-            class="portfolio-item-individual-button">Play Store</a>
+            class="portfolio-item-individual-button">Itch</a>
         </div>      
 
         <!-- Info -->
